[package]
name = "castaway"
version = "0.1.2"
description = "Safe, zero-cost downcasting for limited compile-time specialization."
authors = ["Stephen M. Coakley <me@stephencoakley.com>"]
license = "MIT"
keywords = ["specialization"]
categories = ["no-std", "rust-patterns"]
repository = "https://github.com/sagebind/castaway"
edition = "2018"

[features]
std = []

[dependencies]
rustversion = "1"
