[package]
name = "castaway"
version = "0.2.3"
description = "Safe, zero-cost downcasting for limited compile-time specialization."
authors = ["Stephen M. Coakley <me@stephencoakley.com>"]
license = "MIT"
keywords = ["specialization", "specialize", "cast"]
categories = ["no-std", "rust-patterns"]
repository = "https://github.com/sagebind/castaway"
edition = "2021"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
nightly-const = []
std = ["alloc"]
alloc = []

[dependencies]
rustversion = "1"

[dev-dependencies]
paste = "1"
